Check for weather data